--- a/1-html/my-webpage.html
+++ b/1-html/my-webpage.html
@@ -8,12 +8,13 @@
     </head>
 
     <body>
-		Here is text without paragraph
-		Still no paragraph
-		<p>here is text in paragraph</p>
-		<p>still text in paragraph</p>.
-		<p>still text <br> LINEBREAK! in paragraph</p>
-    
+		<p>here is a <strong>strong</strong> text</p>
+		<p>here is a <em>italic</em> text</p>
+		<p>here is a <ins>underlined</ins> text</p> 
+        <hr>
+        <p>here is a <sup>superscript</sup> text</p>
+        <p>here is a <sub>subscript</sub> text</p>
+        <p>here is a <del>deleted</del> text</p>
     </body>
 
 </html>
