--- a/1-html/my-webpage.html
+++ b/1-html/my-webpage.html
@@ -8,9 +8,20 @@
     </head>
 
     <body>
-        <img src="Harbor.jpeg" width ="200" align="left">
-        <img src="https://broughtonprimary.files.wordpress.com/2016/10/wow.png" width ="100">       
-        <a href ="harbor.jpeg">google</a>
+        <form>
+            <p>Username: <input type="text" placeholder="Your username"/></p>
+            <p>Stay logged in: <input type="checkbox" checked/></p>
+            <p>Under 18: <input type="radio" name="age" value="u18"/></p>
+            <p>Above 18: <input type="radio" name="age" value="o18"/></p>
+            <p>Favourite food:
+                <select>
+                    <option>Pizza</option>
+                    <option selected>Soup</option>
+                    <option>BBQ</option>
+                </select>
+            </p>
+            <p><input type="submit" value="Click me!" /></p>
+        </form>
     </body>
 
 </html>
