--- a/1-html/l32-entities.html
+++ b/1-html/l32-entities.html
@@ -8,7 +8,10 @@
     </head>
 
     <body>
+        &copy;
+        &dollar;
 
+        check online for HTML ENTITIES, plenty of em there
     </body>
 
 </html>
