--- a/2-css/webpage-with-style.html
+++ b/2-css/webpage-with-style.html
@@ -7,7 +7,7 @@
                 font-size:200%;
             }
             h1{
-                color:pink;
+                color:yellow;
             }
 
 
