--- a/2-css/webpage-with-style.html
+++ b/2-css/webpage-with-style.html
@@ -1,24 +1,61 @@
+
 <html>
-    <head>
-        <title>webpage with style</title>
-        <style type="text/css">
-            p{
-                color:red;
-                font-size:200%;
-            }
-            h1{
-                color:green;
-            }
 
+<head>
 
-        </style>
+    <title>Webpage With Style</title>
 
-    </head>
-    <body>
-        <h1>CSS is cool!</h1>
-        <p>Mike is a real peanut</p>
-        <p>Thomas as well</p>
+    <style type="text/css">
+        .red {
+            color: red;
+        }
 
+        .large {
+            font-size: 200%;
+        }
 
-    </body>
+        #green {
+            color: green;
+        }
+
+        .underlined {
+            text-decoration: underline;
+        }
+
+        #first-section {
+            color: #4285F4;
+            background-color: #CEF6CE;
+            width: 200px;
+        }
+
+        #second-section {
+            background-color: #8AB4F7;
+            width: 200px;
+        }
+    </style>
+
+</head>
+
+<body>
+
+    <div id="first-section">
+
+        <p>The quick brown fox jumped over the lazy dog.</p>
+
+        <p>Wow, I love internal CSS!</p>
+
+    </div>
+
+    <div id="second-section">
+
+        <p id="green">This is some more text. <span class="underlined">And this text is underlined.</span></p>
+
+        <h1 class="red">CSS is cool!</h1>
+
+    </div>
+
+    <p>This paragraph is not floated</p>
+
+</body>
+
 </html>
