--- a/2-css/webpage-with-style.html
+++ b/2-css/webpage-with-style.html
@@ -26,11 +26,14 @@
             color: #4285F4;
             background-color: #CEF6CE;
             width: 200px;
+            margin-left: 150px;
         }
 
         #second-section {
             background-color: #8AB4F7;
             width: 200px;
+            margin: 50px 20px;
+            
         }
     </style>
 
