--- a/2-css/BBC Page.html
+++ b/2-css/BBC Page.html
@@ -7,12 +7,105 @@
     <body>
         <div id="Top-Bar">
             <img id="bbclogo" src="Resources/bbc-logo.png" />
+            <div id="signin-div" class="topbar-selection">
+                <img id="signin-image"src="Resources/signin.png" />
+                <span id="signin-text">Sign in</span>
+            </div>
+            <div class="topbar-selection">
+                <span class="top-tabs">News</span>
+            </div>
+            <div class="topbar-selection">
+                <span class="top-tabs">Sport</span>
+            </div>   
+            <div class="topbar-selection">
+                <span class="top-tabs">Weather</span>
+            </div>   
+            <div class="topbar-selection">
+                <span class="top-tabs">Shop</span>
+            </div>   
+            <div class="topbar-selection">
+                <span class="top-tabs">Earth</span>
+            </div>   
+            <div class="topbar-selection">
+                <span class="top-tabs">Travel</span>
+            </div>
+            <div class="topbar-selection">
+                <span class="top-tabs">Menu</span>
+                <img id="menu-arrow" src="Resources/arrow.png" />
+            </div>
+            <div class="topbar-selection">
+                <input id="search-bar" type="search" value="Search"/>
+                <input type="image" img id="search-image" src="Resources/Search.png"  />
+            </div>
         </div>
-        <div id="news-bar">
-            <h1>NEWS</h1>
-        </div>
-       
 
+        <div id="clear"></div>
+
+        <div id="menu-bar-container">
+            <div id="News">
+                <h1 id="news-header">NEWS</h1>
+            </div>
+        </div>
+
+            <div id="clear"></div>
+
+            <div id="menu-bar-container-2">
+                <div id="menu-bar">
+                    <a href="">Home</a>
+                    <a href="">Video</a>
+                    <a href="">World</a>
+                    <a href="">UK</a>
+                    <a href="">Business</a>
+                    <a href="">Tech</a>
+                    <a href="">Science</a>
+                    <a href="">Magazine</a>
+                    <a href="">Entertainment & Arts</a>
+                    <a href="">Health</a>
+                    <a href="">World News TV</a>
+                    <a href="">More</a>
+                    <img id="white-arrow" src="Resources/white-arrow.png" />
+                </div>
+            </div>  
+
+        <div class="clear"></div>
+
+        <div id="page-container">
+            <div id="main-article">
+                <div id="title-stuff">
+                    <h2> <a href="">Technology</a></h2>
+                    <h3>Uber sued by car-share stab victim</h3>
+                    <p><img class="clock" src="Resources/clock.png"> <span class="date">5 April 2017</span> <a class="topic-link" href="">Technology</a></p>                               
+                </div>
+                
+                <img id="main-article-image" src="Resources/Uber.jpg" />
+
+                <div id="main-article-text">
+                    <p><strong>A woman who was attacked with a knife in an Uber car is suing the ride-sharing company.</strong></p>
+                    <p>Chicago resident Jennifer Camacho says another passenger slashed her face several times while using Uber Pool.</p>
+                    <p>The service lets strangers share a car to reduce the cost of a trip.</p>
+                    <p>But Uber said the "altercation" did not involve the company and its insurance provider has refused to compensate Ms Camacho because the assault was not considered accidental.</p>
+                    <p>Ms Camacho had ordered a shared vehicle in January after a night out celebrating with friends.</p>
+                </div>
+            </div>
+
+            <div class="clear"></div>
+
+            <div class="side-bar">
+                <div id="top-stories">
+                    <h4 class="header4">Top Stories</h4>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+        </div>
     </body>
 </html>
 
