--- a/3-javasscript/javascript.html
+++ b/3-javasscript/javascript.html
@@ -7,7 +7,13 @@
 
     <body>
 
-        <button onclick="alert('HI!')">Click me!</button>
+        <p id="Text">Hello World!</p>
+      
+
+       <script type="text/javascript">
+           document.getElementById("Text").innerHTML = "Hello Dylano!";
+
+       </script>
 
     </body>
 
