--- a/3-javasscript/javascript.html
+++ b/3-javasscript/javascript.html
@@ -22,6 +22,20 @@
 
         <script type="text/javascript">
 
+            function doAGuess(correctAnswer) {
+
+                var guess = Math.random();
+                guess = guess * 6;
+                guess = Math.floor(guess);
+
+                if (guess == correctAnswer) {
+                    return (true);
+                }
+                else {
+                    return (false);
+                }
+            }
+
             document.getElementById("guess").onclick = function() {
 
                 var myNumber = document.getElementById("guessNumber").value;
@@ -29,13 +43,10 @@
                 var guessNumber = 1;
 
                 while (gotIt == false) {
-                    var guess = Math.random();
-                    guess = guess * 6;
-                    guess = Math.floor(guess);
 
-                    if (guess == myNumber) {
+                    if (doAGuess(myNumber) == true) {
                         gotIt = true;
-                        alert("Got It! It was a " + guess + " . It took me " + guessNumber + " guesses.");
+                        alert("Got It! It was a " + myNumber + " . It took me " + guessNumber + " guesses.");
                     }
                     else {
                         guessNumber++;
