--- a/4-JQuery/jquery.html
+++ b/4-JQuery/jquery.html
@@ -1,44 +1,28 @@
 
 <html>
 
-    <head> 
-        <title>JQuery</title>   
-        <script type="text/javascript" src="jquery.min.js"></script>
+<head>
+    <title>AJAX</title>
+    <script type="text/javascript" src="jquery.min.js"></script>
 
-        <style>
-            #Circle {
-                width: 200px;
-                height: 200px;
-                background-color:green;
-                border-radius: 50%;
-                margin: 10px;
-            }
+    <style>
+    </style>
+</head>
+<body>
 
-
-        </style>
-    </head>
-    <body>
-
-        <div id="Circle"></div>
+    <p id="dataInsert"><p>
 
 
         <script type="text/javascript">
 
-            $("#Circle").on("click", function () {
-                $(this).animate({
-                    width: "500px",
-                    height: "500px",
-                    marginLeft: "100px",
-                    marginTop:"100px",
-                }, 2000, function () {
-                    $(this).css("backgroundColor", "red");
-                });
+        	$.ajax("info.txt")
+              .done(function(data) {
+            	$("#dataInsert").html(data);
+            })
+              .fail(function() {
+            	alert("data not found!");
             });
 
-
-
-
         </script>
-
-    </body>
+</body>
 </html>
