--- a/4-JQuery/jquery.html
+++ b/4-JQuery/jquery.html
@@ -1,84 +1,46 @@
 
 <html>
-
 <head>
-    <title>jquery</title>
+    <title>Code Player</title>
     <script type="text/javascript" src="jquery.min.js"></script>
-    <script src="jquery-ui/jquery-ui.js"></script>
-    <link href="jquery-ui/jquery-ui.css" rel="stylesheet">  
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
 
     <style>
-  #sortable { 
-      list-style-type: none;
-      margin: 0; 
-      padding: 0; 
-      width: 60%; 
-  }
-  
-  #sortable li { 
-      margin: 0 3px 3px 3px; 
-      padding: 0.4em; 
-      padding-left: 1.5em; 
-      font-size: 1.4em; 
-      height: 18px; 
-  }
+        body {
+            margin: 0 auto;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+        }
 
-  #sortable li span { 
-      position: absolute; 
-      margin-left: -1.3em; 
-      margin-top: 3px;
-  }
+        header {
+            height: 40px;
+            width: auto;
+            background-color: lightgray;
+        }
+
+        #bar-content {
+           margin-top: -10px;
+        }
+
+        h1 {
+            font-size: 150%;
+            float: left;
+        }
 
     </style>
 </head>
 <body>
-    <div id="accordion">
-        <h3>Dutch</h3>
-        <div>
-            <p>hallo</p>
-            <img src="http://data.whicdn.com/images/251646372/superthumb.jpg"  />
-        </div>
-        <h3>English</h3>
-        <div>
-            <p>Hello</p>
-        </div>
-        <h3>Swedish</h3>
-        <div>
-            <p>Hej</p>
-        </div> 
-        <h3>Russian</h3>
-        <div>
-            <p>Priviet</p>
-        </div>
-        <h3>Japanese</h3>
-        <div>
-            <p>Konnichiha</p>
-        </div>
-    </div>
+    <header>
+        <div id="grey-bar">
+            <div id="bar-content">
+                <h1>CodePlayer</h1>
+                </div>
+            </div>
+        
 
-    <br />
-
-    <ul id="sortable">
-        <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 1</li>
-        <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 2</li>
-        <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 3</li>
-        <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 4</li>
-        <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 5</li>
-        <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 6</li>
-        <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 7</li>
-    </ul>
-
-
+    </header>
 
     <script type="text/javascript">
         
-        $("#accordion").accordion({
-            animate: 200
-        });
-
-
-        $("#sortable").sortable();
 
     </script>
 </body>
