Finished JQuery project

--- a/4-JQuery/MyAttempt/jquery.html
+++ b/4-JQuery/MyAttempt/jquery.html
@@ -15,10 +15,10 @@
         </div>
 
         <div id="buttonContainer">
-            <div id="htmlButton" class="toggleButton active" >HTML</div>
-            <div id="cssButton" class="toggleButton">CSS</div>
-            <div id="javascriptButton" class="toggleButton">Javascript</div>
-            <div id="outputButton" class="toggleButton active">Output</div>
+            <div id="html" class="toggleButton active" >HTML</div>
+            <div id="css" class="toggleButton">CSS</div>
+            <div id="javascript" class="toggleButton">Javascript</div>
+            <div id="output" class="toggleButton active">Output</div>
         </div>
 
     </div>
