--- a/0-Practice/Thomas/page.html
+++ b/0-Practice/Thomas/page.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+
+
 <html>
+
   <head>
     <title>portfolio</title>
     <link rel="stylesheet" type="text/css" href="css.css">
@@ -6,25 +10,21 @@
   <body>
 
     <div id="nav-container">
-
       <div id="nav-greyBar">
-
-          <h1 id="thomas-text">THOMAS <img id="logo" src="Resources/ThomasLogo.png" /> FRANKEN</h1>
-
+          <h1 id="thomas-text">THOMAS <img id="logo" src="Resources/ThomasLogo.png" alt="baka" /> FRANKEN</h1>
       </div>
     </div>
 
     <div id="body-container">
 
       <div id="me">
-        <img id="thomas-photo" src="Resources/thomas.jpg" />
-
+        <img id="thomas-photo" src="Resources/thomas.jpg" alt="nope" />
         <div id="me-container">
           <h1 id="me-text">Me</h1>
-          <p>My passion for art and design started at a young age which I got from drawing with my grandfather.</p>
-          <p>As soon as I was able, I went to a school where I could learn to become better at art and design.
-This school was SintLucas.</p>
-          <p>While studying I had to find an internship and wanted to challenge myself and at the same time gain more experience and see different cultures. Because of this I decided to go to Bangkok, Thailand for my internship, where I worked at a game company for 5 months.</p>
+          <p class="text-props"><span>My passion for art and design started at a young age which I got from drawing with my grandfather.</span></p>
+          <p class="text-props"><span>As soon as I was able, I went to a school where I could learn to become better at art and design.
+This school was SintLucas.</span></p>
+          <p class="text-props"><span>While studying I had to find an internship and wanted to challenge myself and at the same time gain more experience and see different cultures. Because of this I decided to go to Bangkok, Thailand for my internship, where I worked at a game company for 5 months.</span></p>
         </div>
 
       </div>
