--- a/4-JQuery/jquery.html
+++ b/4-JQuery/jquery.html
@@ -44,9 +44,12 @@
             border-left: solid 1px black;  
                           
         }
+		.toggleButton::{
+			border-radius: 5px 0 0 5px;
+		}
 
         #html {
-            border-radius: 5px 0 0 5px;  
+           border-radius: 5px 0 0 5px;  
         }
 
         #css {
